
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct mmap_entry {int start; int end; int flags; } ;
typedef int name ;
typedef int empty ;


 int PAGE_SIZE ;
 int assert (int) ;
 int close (int) ;
 int create_file_in_dir (int,char*) ;
 int memset (char**,int ,int) ;
 int name_mmap (unsigned long,unsigned long,int ,char*,int) ;
 scalar_t__ page_check_virt (unsigned long) ;
 unsigned long page_virt_to_phys (unsigned long) ;
 int print_mmap (unsigned long,unsigned long,int ) ;
 int read_phys_memory (unsigned long,unsigned long,int,int) ;
 int write_bytes (int,unsigned long,char*,int) ;

__attribute__((used)) static void save_mmap(struct mmap_entry *entry, void *private) {
 int dirfd = (int)(unsigned long)private;
 unsigned long length;
 char name[128];
 char empty[PAGE_SIZE];

 assert(entry->start % PAGE_SIZE == 0);
 assert(entry->end % PAGE_SIZE == 0);

 memset(&empty, 0, sizeof(empty));
 length = entry->end - entry->start;

 print_mmap(entry->start, entry->end, entry->flags);
 name_mmap(entry->start, entry->end, entry->flags,
   &name[0], sizeof(name));
 int fd = create_file_in_dir(dirfd, &name[0]);

 size_t total_read = 0;
 while (total_read < length) {
  if (page_check_virt(entry->start + total_read)) {
   unsigned long offset = page_virt_to_phys(
    entry->start + total_read);
   read_phys_memory(entry->start + total_read, offset,
      PAGE_SIZE, fd);
  } else {
   write_bytes(fd, entry->start + total_read,
     &empty[0], PAGE_SIZE);
  }
  total_read += PAGE_SIZE;
 }

 close(fd);
}
